--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div id="beepboxEditorContainer" style="width: 100px; height: 725px;"></div>
 
 		<h2>
-			We made a Beepbox Wiki! You can see it and contribute to it  <a href="http://beepbox.wikia.com/wiki/Beepbox_Wiki">here</a>.
+			Hey! You there! Catch up to the latest and greatest in Modbox with <a href="https://moddedbeepbox.github.io/3.0/">Modbox 3.0</a>!
 		</h2>
 		<h1>
 			ModBox 2.3
